--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+  MANOHAR RAO | A Web Developer 
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -56,16 +56,48 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+
+         <h3>HI I'M</h3>
+          <span>
+            <H2>M.LAXMI MANOHAR RAO</H2>
+            </span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A FULL STACK Web Developer </p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <a href="https://drive.google.com/file/d/1sa_0GyH95XMEoO_C9gZv81vwVrYIaelM/view?usp=sharing" target="_blank" class="btn btn--pink">My RESUME</a>
       </div>
     </div>
   </header>
 
   <main role="main">
+
+    <section class="about" id="about">
+      <div class="row">
+        <h2>About Me</h2>
+        <div class="about__content">
+          <div class="about__text">
+            <!-- Replace the below paragraph with info about yourself -->
+            <p style ="font-size: 20px;" >
+              I am a FullStack Developer and a curious person who loves to solve problems 
+              and learn new Technologies. Beside coding  I love  playing
+              volleyball, listening to music.
+            </p>
+            <!-- Provide a link to your resume -->
+            <!-- <a href="#" class="btn">My Resume</a> -->
+          </div>
+
+          <div class="about__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="about__photo" id="mypic" src="./images/Linkedin 2.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+
+
 
     <!-- ***** Work ***** -->
 
@@ -78,50 +110,51 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Max-Fashion Clone</h3>
               <p>
                 A free Open Source Portfolio for anyone to use for free.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
-                <li>SCSS</li>
+                <li>CSS</li>
                 <li>JavaScript</li>
-                <li>Parcel</li>
+               
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="http://max-fashion-clone.vercel.app/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/sangram-mkj/maxFashion-clone" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/Screenshot (35).png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>SmallCase Clone</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
                 eius.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
+                <li>EXPRESS</li>
+                <li>CSS</li>
+                <li>HTML</li>
                 <li>Node</li>
                 <li>MongoDB</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="#" class="link__text" target="_blank">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
+                <a href="https://github.com/sahilgarg29/smallcase" target="_blank">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
@@ -130,7 +163,7 @@
               <img src="./images/project-2.png" class="work__image" alt="Project 1" />
             </div>
           </div>
-
+<!-- 
           <div class="work__box">
             <div class="work__text">
               <h3>Notificator</h3>
@@ -159,52 +192,40 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <!-- ***** Clients ***** -->
 
     <section class="client" id="clients">
       <div class="row">
-        <h2>Clients</h2>
+        <h2>Skills</h2>
+        <h3>Frontend</h3>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+          <img src="./images/html.png" class="client__logo" alt="Company 2" />
+          <img src="./images/css.png" class="client__logo" alt="Company 3" />
+          <img src="./images/javascript.png" class="client__logo" alt="Company 1" />
+          <img src="./images/react.png" class="client__logo" alt="Company 1" />
+          <!-- <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
+          <img src="./images/chippy.png" class="client__logo" alt="Company 1" /> -->
+        </div>
+        <h3 id="bb">Backend</h3>
+        <div class="client__logos">
+          <!-- Add logos of the clients or companies you'have worked with. -->
+          <img src="./images/mongodb.png" class="client__logo" alt="Company 2" />
+          <img src="./images/express.png" class="client__logo" alt="Company 3" />
+          <img src="./images/node-js.png" class="client__logo" alt="Company 1" />
+          <img src="./images/git.png" class="client__logo" alt="Company 1" />
+          <!-- <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
+          <img src="./images/chippy.png" class="client__logo" alt="Company 1" /> -->
         </div>
       </div>
     </section>
 
     <!-- ***** About ***** -->
 
-    <section class="about" id="about">
-      <div class="row">
-        <h2>About Me</h2>
-        <div class="about__content">
-          <div class="about__text">
-            <!-- Replace the below paragraph with info about yourself -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
-            </p>
-            <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
-          </div>
-
-          <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+  
 
   <!-- ***** Contact ***** -->
 
@@ -213,15 +234,15 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
+          <!-- Are you looking for a fast-performing and user-friendly website to
           represent your product or business? or looking for any kind of
           consultation? or want to ask questions? or have some advice for me
           or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          will do my best to respond back. 😊 The quickest way to reach out to -->
+          😊 The quickest way to reach out to me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="manoharrao567@gmail.com" class="btn">manoharrao567@gmail.com</a>
       </div>
     </div>
   </section>
@@ -233,22 +254,22 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
+          <a href="https://twitter.com/manohar9517" title="Link to Twitter Profile"  target="_blank">
             <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/Iman0har/" title="Link to Github Profile"  target="_blank">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
-        <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
+        <!-- <li class="footer__social-link-item">
+          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile"  target="_blank">
             <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
           </a>
-        </li>
+        </li> -->
         <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
+          <a href="https://www.linkedin.com/in/manohar-rao-456224193/"  target="_blank">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
@@ -258,12 +279,12 @@
       <p>
         &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
       </p>
-      <div class="footer__github-buttons">
+      <!-- <div class="footer__github-buttons">
         <iframe
           src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
           frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
         </iframe>
-      </div>
+      </div> -->
     </div>
   </footer>
 
