--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
             <div class="work__text">
               <h3>Max-Fashion Clone</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                Max fashion is an  e-commerce website for clothing. 
+                We cloned  the frontend part of the max website with all major functionalities.
+                 We have tried to make the same site with our effects and technolgy stacks.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -139,8 +141,8 @@
             <div class="work__text">
               <h3>SmallCase Clone</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Smallcase is an online website where we can invest in stocks. Me with my team members tried to
+                clone the website using frontend and backend. And finally we created a replica of smallcase.
               </p>
               <ul class="work__list">
                 <li>EXPRESS</li>
