--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                 clone the website using frontend and backend. And finally we created a replica of smallcase.
               </p>
               <ul class="work__list">
-                <li>EXPRESS</li>
-                <li>CSS</li>
                 <li>HTML</li>
+                <li>CSS</li>
+                <li>EXPRESS</li>
                 <li>Node</li>
                 <li>MongoDB</li>
               </ul>
@@ -278,9 +278,14 @@
       </ul>
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
-      <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
-      </p>
+      <div style="display: inline;">
+      <div style="display: inline; font-size: 10px;">
+         Template inspired from @Nisar 
+      </div>
+         <div style="display: inline;margin-left: 40px;">                 
+        developed by <a href="" class="link">Manohar</a>.
+         </div>
+        </div>
       <!-- <div class="footer__github-buttons">
         <iframe
           src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
