--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text" target="_blank">
+                <a href="https://smallcase-clone.netlify.app/" class="link__text" target="_blank">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/sahilgarg29/smallcase" target="_blank">
